--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{title}}
-  </h1>
+  </h1> -->
   <app-header></app-header>
   <app-banner></app-banner>
   <app-course-featued></app-course-featued>
