--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
     Welcome to {{title}}
   </h1> -->
   <app-header></app-header>
-  <app-banner></app-banner>
-  <app-course-featued></app-course-featued>
-  <app-footer></app-footer>
-
-  <router-outlet></router-outlet>
+  <app-banner *ngIf="router.url=='/'"></app-banner>
+  <app-course-featued *ngIf="router.url=='/'"></app-course-featued>
+ <router-outlet></router-outlet>
+<app-footer></app-footer>
